# stlc_copilot

./: LICENSE  README.md  pyproject.toml
.github/workflows/: dev_stlc-copilot.yml  main_stlc-copilot.yml  poetry_stlc-copilot.yml  zephyr_ai-test-360.yml
src/stlc_copilot/: config.py  main.py
src/stlc_copilot/dto/: confluence_page_content_dto.py  github_branch_dto.py  jira_error_response_dto.py  jira_issue_dto.py  webhook_dto.py  xray_test_dto.py  zephyr_folder_dto.py  zephyr_test_dto.py  zephyr_test_steps_dto.py
src/stlc_copilot/resources/: epic.json  prompt.json  temp.json  test.json  trial.json  userstory.json  xray_test.json
src/stlc_copilot/services/: confluence_service.py  event_router.py  github_service.py  gpt_llm_service.py  jira_data_tranformer.py  jira_service.py  json_fixer.py  llm_data_transformer.py  search_service.py  xray_service.py  zephyr_data_tranformer.py  zephyr_service.py
src/stlc_copilot/utils/: content_util.py  request_sender.py  zip_util.py
