[tool.poetry]
name = "stlc-copilot"
version = "0.1.0"
description = ""
authors = ["Jojo Thomas <jojothomas007@gmail.com>"]
readme = "README.md"
packages = [{include = "stlc_copilot", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.11"
uvicorn = "^0.34.0"
requests = "^2.32.3"
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "uvicorn src.stlc_copilot.main:app --reload --host 0.0.0.0 --port 8000"