[tool.poetry]
name = "stlc-copilot"
version = "0.1.1"
description = ""
authors = ["Jojo Thomas <jojothomas007@gmail.com>"]
readme = "README.md"
packages = [{include = "stlc_copilot", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.11"
uvicorn = "^0.34.0"
pypdf = "^5.3.1"
python-docx = "^1.1.2"
python-dotenv = "^1.0.1"
faiss-cpu = "^1.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "uvicorn src.stlc_copilot.main:app --reload --host 0.0.0.0 --port 8000"